2009-03-10: Jason Long <jlong@messiah.edu>
 * t/simple_canonicalization.t: fix simple-canonicalization test, which
   broke when I removed support for prestandardized DKIM signatures

2009-03-10: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/Algorithm/*, lib/Mail/DKIM/Canonicalization/*,
   lib/Mail/DKIM/Signature.pm, t/verifier.t: remove support and tests
   for the prestandardized DKIM signatures (issue #1871948)
 * Makefile.PL: bump version

 -- VERSION 0.33 --

2009-03-10: Jason Long <jlong@messiah.edu>
 * Makefile.PL: release "0.33"

2008-11-19: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/Signature.pm, DkSignature.pm (DEFAULT_PREFIX): new
   method which determines what prefix to use in as_string, prettify,
   etc.
 * lib/Mail/DKIM/KeyValueList.pm (wrap): when splitting the h= field,
   only allow breaks prior to ':' symbols

2008-11-19: Jason Long <jlong@messiah.edu>
 * t/signature.t: further checks for prettify signatures (found a case
   where the new code caused a regression)
 * lib/Mail/DKIM/TextWrap.pm (flush): remember to update cur position
   when flushing text; use a "may_break" internal variable to know
   whether a linebreak is acceptable; other fixes
 * t/textwrap.t: another test case illustrating failure in TextWrap.pm
 * lib/Mail/DKIM/KeyValueList.pm (wrap): call flush() right after the
   ';' character; this is a further fix for #2257046.

2008-11-10: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/TextWrap.pm (flush): new method to explicitly allow a
   break at the current point in the string
 * lib/Mail/DKIM/KeyValueList.pm (wrap): call flush() whenever changing
   TextWrap parameters (this should complete the fix for #2257046)

2008-11-06: Jason Long <jlong@messiah.edu>
 * t/signature.t: test Mark Martinec's bad-signature-wrapping bug

2008-11-06: Jason Long <jlong@messiah.edu>
 * t/verifier.t: use a "fake" dns implementation, so that this test
   will pass no matter the user's state of dns

2008-11-06: Jason Long <jlong@messiah.edu>